(lang dune 2.8)
(name context)
(generate_opam_files true)

(package
 (name context)
 (synopsis "A library for manipulating De Bruijn variables, name(space)s, and contexts")
 (depends basis)
 (license LGPL-3.0)
 (maintainers "Jordy Dickinson <jordy.dickinson@icloud.com>")
 (authors "Jordy Dickinson <jordy.dickinson@icloud.com>")
 (homepage https://github.com/jordydickinson/context)
 (bug_reports https://github.com/jordydickinson/context/issues))